# basefmt

./: .copier-answers.yml  .editorconfig  .mise.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  release-please-config.json  renovate.json5
.github/workflows/: pr-title-check.yml  release-please.yml  test.yml
src/: config.rs  editorconfig.rs  find.rs  format.rs  lib.rs  main.rs  runner.rs
tests/: integration_test.rs
tests/fixtures/config/: .basefmt.toml  .editorconfig  markdown.md  normal.txt
tests/fixtures/config/test/fixtures/: data.txt
tests/fixtures/expected/: no_final_newline.txt
tests/fixtures/input/: leading_newlines.txt  no_final_newline.txt  trailing_space.txt
