[package]
name = "basefmt"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Formatter for generic text files, ensuring final newlines and trimming spaces with EditorConfig support"
readme = "README.md"
repository = "https://github.com/fohte/basefmt"
homepage = "https://github.com/fohte/basefmt"
documentation = "https://docs.rs/basefmt"
keywords = ["formatter", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ec4rs = "1.2.0"
globset = "0.4.15"
ignore = "0.4.23"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.23.0"
toml = "0.8"

[dev-dependencies]
indoc = "2.0.7"
rstest = "0.26.1"
